--- a/Rmarkdown/current_pipeline/scRNA_DEPLETED.Rmd
+++ b/Rmarkdown/current_pipeline/scRNA_DEPLETED.Rmd
@@ -29,7 +29,7 @@ library(plotly)
 library(tidyr)
 library(factoextra)
 library(FactoMineR)
- library(ggrepel)
+library(ggrepel)
 
 source('../R/azimuth_analysis.R')
 ```
@@ -114,8 +114,6 @@ p_mt_method_type = ggplot(metadata_raw, aes(x=method, y=percent.mt, fill=method)
 
 #anova for stats
 anova(lm(percent.mt~method*type+samplename, data = data_summarised))
-
-
 ```
 
 
@@ -358,11 +356,6 @@ cnvMean = ggplot(metadata_simplified, aes(cnv_score,predicted.ann_level_3)) + ge
  if(i ==1) sc_sn_plots[[i]] = number_of_cells
  if(i ==2) sc_sn_plots[[i]] = number_of_cells
 }
-
-
-#pdf(file.path(params$datapath,'../results/Figures_august2023/Suppl_Fig9_barplots_lambrechtsDepletion.pdf'),width = 14,height = 12) 
-(sc_sn_plots[[1]]/sc_sn_plots[[2]] ) + plot_annotation(tag_levels = list(c('A','B','C','D','E','F','G')))
-#dev.off()
 ```
 
 ```{r save plots, message= T}
@@ -401,128 +394,12 @@ for(i in 1:24){
 combined_raw = merge(seurat.objects.subsetted[[1]],seurat.objects.subsetted[c(2:24)])
 combined = subset(combined_raw, subset = predicted.ann_level_1 != 'Unclassified')
 combined = subset(combined, subset = type != 'Tumor')
-
-combined_agg_DF = AggregateExpression(combined, assays = "SCT", return.seurat = F, group.by = c('method', "patient"))
-combined_agg_DF = data.frame(combined_agg_DF$SCT,check.names = F)
-
-
-#normalise by the number of cells
-number_of_cells = as.data.frame(table(combined@meta.data$method,combined@meta.data$patient))
-number_of_cells = number_of_cells[order(number_of_cells$Var1,number_of_cells$Var2),]
-combined_agg_DF = (apply(combined_agg_DF, 1, function(x) x/number_of_cells$Freq))
-
-#PCA
-pseudobulkRNAseq_pca = PCA(combined_agg_DF,scale = T, graph = F) #I just dont want the None category
-
-#samples DF
-data = as.data.frame(pseudobulkRNAseq_pca$ind$coord)
-rownames(data) = gsub('_4','_1',rownames(data))
-rownames(data) = gsub('_6','_2',rownames(data))
-rownames(data) = gsub('_8','_3',rownames(data))
-rownames(data) = gsub('_10','_4',rownames(data))
-data$Patients = sapply(strsplit(rownames(data), "_",fixed = T), "[",2)
-data$method = sapply(strsplit(rownames(data), "_",fixed = T), "[",1)
-data$`method X Patients` = rownames(data)
-
-
-#gene variable DF
-plot_depleted_all2 = ggplot(data,aes(x= Dim.1,y=Dim.2, fill = `method X Patients` )) + 
-  geom_hline(yintercept=0,linetype="dashed") + 
-  geom_vline(xintercept=0,linetype="dashed") + 
-  geom_point(size = 6,color = 'black', shape=21,alpha =0.75)  + 
-  ylab('PC2') +
-  xlab('PC1') +
-  theme_bw() + 
-  scale_fill_manual(values = c(RColorBrewer::brewer.pal(n = 11, name = "RdYlBu")[c(4:1,8:11)],RColorBrewer::brewer.pal(n = 9, name = "Greens")[c(3,5,7,9)])  ) +
-  theme(legend.position = 'right') +
-  ggtitle('2,209 (top5%) most variable genes')
 ```
 
 
-
-# PCA marker genes
-```{r pca marker genes, message= T}
-###session
-Immune = c('LCP1','CD53','PTPRC','COTL1','CXCR4','GMFG','FCER1G','LAPTM5','SRGN','CD52')
-Epithelial = c('KRT7','PIGR','ELF3','CYB5A','KRT8','KRT19','TACSTD2','MUC1','S100A14','CXCL17')
-Endothelial = c('PTRF','CLDN5','AQP1','PECAM1','NPDC1','VWF','GNG11','RAMP2','CLEC14A')
-Stroma = c('TPM2','DCN','MGP','SPARC','CALD1','LUM','TAGLN','IGFBP7','COL1A2','C1S','supetoto')
-
-features = unique(c(Immune,Epithelial,Endothelial,Stroma))
-
-seurat.objects.subsetted = list()
-
-for(i in 1:24){
-  seurat.objects.subsetted[[i]] = subset(seurat.objects[[i]],features = features)
-}
-
-#combine
-combined = merge(seurat.objects.subsetted[[1]],seurat.objects.subsetted[c(2:24)])
-combined = subset(combined, subset = predicted.ann_level_1 != 'Unclassified')
-combined = subset(combined, subset = type != 'Tumor')
-combined@meta.data$method = gsub('immune','Immune',combined@meta.data$method)
-
-
-combined_agg_DF = AggregateExpression(combined, assays = "SCT", return.seurat = F, group.by = c('method', "patient","predicted.ann_level_1"))
-combined_agg_DF = data.frame(combined_agg_DF$SCT,check.names = F)
-
-# each 'cell' is a donor-condition-celltype pseudobulk profile
-combined_agg_DF = combined_agg_DF[,order(colnames(combined_agg_DF))]
-
-#normalise by the number of cells
-number_of_cells = as.data.frame(table(combined@meta.data$patient,combined@meta.data$predicted.ann_level_1,combined@meta.data$method))
-number_of_cells$type_method_level1 = paste(number_of_cells$Var3,number_of_cells$Var1,number_of_cells$Var2,sep = '_')
-number_of_cells = number_of_cells[order(number_of_cells$type_method_level1),]
-
-combined_agg_DF = (apply(combined_agg_DF, 1, function(x) x/number_of_cells$Freq))
-
-#PCA
-pseudobulkRNAseq_pca = PCA(combined_agg_DF,scale = T, graph = F) #I just dont want the None category
-
-#samples DF
-data = as.data.frame(pseudobulkRNAseq_pca$ind$coord)
-rownames(data) = gsub('_4','_1',rownames(data))
-rownames(data) = gsub('_6','_2',rownames(data))
-rownames(data) = gsub('_8','_3',rownames(data))
-rownames(data) = gsub('_10','_4',rownames(data))
-
-data$Patients = sapply(strsplit(rownames(data), "_",fixed = T), "[",2)
-#data$tissue = sapply(strsplit(rownames(data), "_",fixed = T), "[",1)
-data$method = sapply(strsplit(rownames(data), "_",fixed = T), "[",1)
-data$`cell types` = sapply(strsplit(rownames(data), "_",fixed = T), "[",3)
-
-p_tissuemethod = ggplot(data,aes(x= Dim.1,y=Dim.2,shape = method, fill = `cell types`)) +
-    geom_hline(yintercept=0,linetype="dashed") + 
-    geom_vline(xintercept=0,linetype="dashed") + 
-    geom_point(size = 4,alpha =0.75)  + 
-    ylab(paste0('PC2 (',round(pseudobulkRNAseq_pca$eig[2,2],1),'%)')) +
-    xlab(paste0('PC1 (',round(pseudobulkRNAseq_pca$eig[1,2],1),'%)')) +
-    scale_fill_manual(values = brewer.pal(n = 4, name = "Set1")) +
-    scale_color_manual(values = brewer.pal(n = 4, name = "Set1")) +
-    scale_shape_manual(values=c(21, 22, 24)) +
-    theme_bw() +
-    theme(legend.position = 'right') +
-    ggtitle('Cell type canonical markers (39 genes)')+
-    guides(fill = guide_legend(override.aes = list(shape= 21,fill = brewer.pal(n = 4, name = "Set1"))))
-```
-
-
-# PCA marker genes 4 plots
-```{r pca marker genes, message= T}
-#got this file from OFlanagan_et_al2019. 
-stress_references = read_xlsx(file.path(params$datapath,"512genes_OFlanagan_et_al2019.xlsx"))
-
-#prepare output df
-stress_genes = data.frame(gene = rownames(seurat.objects[[i]]@assays$RNA)[rownames(seurat.objects[[i]]@assays$RNA) %in% stress_references$gene_symbol])
-nonstressgenes = rownames(combined@assays$RNA)[rownames(combined@assays$RNA) %in% stress_genes[,1]==FALSE]
-
-# 
-combined = subset(combined_raw, subset = predicted.ann_level_1 != 'Unclassified')
-combined = subset(combined, subset = type != 'Tumor')
-combined = subset(combined,features = nonstressgenes)
-combined@meta.data$method = gsub('immune','Immune',combined@meta.data$method)
-combined@meta.data$met_type = paste0(combined@meta.data$method, '_',combined@meta.data$type)
-
+# plots
+```{r plots.,message  = T}  
+#
 ct = c('_Immune','_Epithelial','_Endothelial','_Stroma')
 plots = list()
 
@@ -560,94 +437,38 @@ rownames(data) = gsub('_8','_3',rownames(data))
 rownames(data) = gsub('_10','_4',rownames(data))
 
 data$Patients = paste0('P',sapply(strsplit(rownames(data), "_",fixed = T), "[",2))
-#data$tissue = sapply(strsplit(rownames(data), "_",fixed = T), "[",1)
-data$method = sapply(strsplit(rownames(data), "_",fixed = T), "[",1)
+data$Method = sapply(strsplit(rownames(data), "_",fixed = T), "[",1)
 data$`cell types` = sapply(strsplit(rownames(data), "_",fixed = T), "[",3)
 data$`method X Patients` = gsub(ct[i],'',rownames(data))
 
-p_tissuemethod = ggplot(data,aes(x= Dim.1,y=Dim.2, fill = `method X Patients`)) +
+p_tissuemethod = ggplot(data,aes(x= Dim.1,y=Dim.2, fill = Method)) +
     geom_hline(yintercept=0,linetype="dashed") + 
     geom_vline(xintercept=0,linetype="dashed") + 
     geom_point(size = 4,alpha =0.75,shape =21,color = 'black') +
-  #  ggrepel::geom_text_repel(aes(label = Patients)) +
+    ggrepel::geom_text_repel(aes(label = Patients)) +
+    stat_ellipse(aes(color = method)) +
     ylab(paste0('PC2 (',round(pseudobulkRNAseq_pca$eig[2,2],1),'%)')) +
     xlab(paste0('PC1 (',round(pseudobulkRNAseq_pca$eig[1,2],1),'%)')) +
     theme_bw() +
     theme(legend.position = 'right') +
-    scale_fill_manual(values = c(RColorBrewer::brewer.pal(n = 11, name = "RdYlBu")[c(4:1,8:11)],RColorBrewer::brewer.pal(n = 9, name = "Greens")[c(3,5,7,9)])  ) +
-    ggtitle(paste0(gsub('_','',ct[i]),' cells ~ gene expression'))
-
+   ggtitle(paste0(gsub('_','',ct[i]),' cells'))
 
 plots[[i]] = p_tissuemethod
 }
 
-
-pdf(file.path(params$datapath,'../results/Figures_March2024/Fig_S10_depletedPCA.pdf'),width = 12,height = 8) 
+pdf(file.path(params$datapath,'../results/Figures_March2024/Fig_S10_depletedPCA.pdf'),width = 10,height = 8) 
 plots[[1]]+plots[[2]]+plots[[3]]+plots[[4]]+ plot_layout(guides = 'collect') + plot_annotation(tag_levels = 'A')
 dev.off()
-
-
 ```
 
 
 
-
-
-# PCA cell types
-```{r pca cell types, message= T}
-#PC with celltypes
-ct = as.data.frame(table(metadata$patient,metadata$type,metadata$method,metadata$predicted.ann_level_3))
-ct = ct[ct$Var4!= 'Unclassified',]
-ct = ct[ct$Var4!= 'Submucosal Secretory',]
-ct = ct[ct$Var2!= 'Tumor',]
-ct = ct[ct$Var4!='None', ]
-
-ct$names = paste0(ct$Var3,'_',ct$Var1)
-ct = tidyr::pivot_wider(ct,values_from= Freq,names_from = Var4)
-ct_normalised = as.data.frame(ct[,-c(1:4)])
-rownames(ct_normalised) = ct$names
-ct_normalised = t(ct_normalised)
-number_of_cells = colSums(ct_normalised)
-
-ct_normalised = (apply(ct_normalised, 1, function(x) x/number_of_cells))
-
-#PCA
-pseudobulkRNAseq_pca = PCA(ct_normalised,scale = T, graph = F) #I just dont want the None category
-data = as.data.frame(pseudobulkRNAseq_pca$ind$coord)
-rownames(data) = gsub('_4','_1',rownames(data))
-rownames(data) = gsub('_6','_2',rownames(data))
-rownames(data) = gsub('_8','_3',rownames(data))
-rownames(data) = gsub('_10','_4',rownames(data))
-data$`Method X sample` = rownames(data)
-
-#gene variable DF
-gene_variables = as.data.frame(pseudobulkRNAseq_pca$var)[,1:4]
-gene_variables$celltypes = rownames(gene_variables)
-
-#
-p_celltype  = ggplot() + 
-#    geom_segment(data =gene_variables,  aes(x = rep(0,21), y = rep(0,21), xend = coord.Dim.1*max(abs(data$Dim.1)), yend = coord.Dim.2*max(abs(data$Dim.2))), arrow = arrow(length = unit(0.2, "cm")), show.legend = T ) + 
-    geom_hline(yintercept=0,linetype="dashed") + geom_vline(xintercept=0, linetype="dashed") +
-#  geom_label_repel(data = gene_variables, aes(label = celltypes, x = coord.Dim.1*max(abs(data$Dim.1)), y = coord.Dim.2*max(abs(data$Dim.2))),size = 2) +
-  geom_point(data=data,aes(x= Dim.1,y=Dim.2, fill = `Method X sample`), size = 6,color = 'black', shape = 21,alpha =1) +
-  ylab('PC2') +
-  xlab('PC1') +
-  theme_bw() + 
-  scale_fill_manual(values = c(brewer.pal(n = 11, name = "RdYlBu")[c(4:1,8:11)],brewer.pal(n = 9, name = "Greens")[c(3,5,7,9)])  ) +
-  theme(legend.position = 'right') +
-  ggtitle('Cell types (level3)')
-
-#
+# session info  
+```{r session, message= T}
+###session
+sessionInfo()
 ```
 
-
-```{r plots}
-
-#pdf(file.path(params$datapath,'../results/Figures_March2024/Fig_S10_depletedPCA.pdf'),width = 12,height = 8) 
-#(plot_depleted_all+ p_celltype)  / ( p_tissuemethod+ plot_spacer()) + plot_annotation(tag_levels = 'A')
-#dev.off()
-
-```
 
 
 
