--- a/Rmarkdown/Mus_musculus/scRNA.Rmd
+++ b/Rmarkdown/Mus_musculus/scRNA.Rmd
@@ -113,20 +113,17 @@ for(i in 1:2) {
 
 # Save filtered data as .h5Seurat objects
 ```{r save, echo = T}
-#seurat.objects[[1]][["RNA"]] <- as(object = seurat.objects[[1]][["RNA"]], Class = "Assay")
-#seurat.objects[[2]][["RNA"]] <- as(object = seurat.objects[[2]][["RNA"]], Class = "Assay")
-#seurat.objects[[3]][["RNA"]] <- as(object = seurat.objects[[3]][["RNA"]], Class = "Assay")
 
-#SaveH5Seurat(seurat.objects[[1]], overwrite = T,filename =  file.path(params$datapath,'CIH_mm10_vM23/CIH_mm10_vM23.h5Seurat'))
-#SaveH5Seurat(seurat.objects[[2]], overwrite = T,filename =  file.path(params$datapath,'NX_mm10_vM23/NX_mm10_vM23.h5Seurat'))
-#saveRDS(seurat.objects, file = file.path(params$datapath,"mm_2samples.rds"))
+#create an temporary object of class assay instead of assay5 for Azimuth (Seurat v4) annotation
+for(i in 1:3) {
+  temp_v3 <- CreateAssayObject(counts = seurat.objects[[i]][['RNA']]$counts)
+  seurat.objects[[i]][["RNA"]] <- temp_v3
+}
 
 
 saveRDS(seurat.objects[[1]],file.path(params$datapath,'CIH_mm10_vM23/CIH_mm10_vM23.rds'))
 saveRDS(seurat.objects[[2]],file.path(params$datapath,'NX_mm10_vM23/NX_mm10_vM23.rds'))
 saveRDS(seurat.objects, file = file.path(params$datapath,"mm_2samples.rds"))
-
-
 ```
 
 
